# ggml

./: .gitignore
examples/: CMakeLists.txt
examples/simple2/: CMakeLists.txt  simple-backend.cpp
